--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     
-
+    <p>hello</p>
+    
     <script src="./assets/materialize/js/materialize.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
